[gd_scene load_steps=2 format=3 uid="uid://f4elqiy3it06"]

[ext_resource type="Script" path="res://Scenes/Plates/Freeze/Plate.gd" id="1_rvl7i"]

[node name="Plate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_rvl7i")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OnClick" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="TimeTap" type="Timer" parent="."]
one_shot = true

[connection signal="button_down" from="OnClick" to="." method="_on_on_click_button_down"]
[connection signal="button_up" from="OnClick" to="." method="_on_on_click_button_up"]
